<resources>
    <string name="app_name">Guess It</string>
    <string name="get_ready_to">Get ready to</string>
    <string name="guess_the_word">guess the word!</string>
    <string name="play">Play</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_word_is">The word is...</string>
    <string name="got_it">Got it</string>
    <string name="skip">Skip</string>
    <string name="you_scored">You Scored:</string>
    <string name="play_again">Play again</string>
</resources>